.dev-workstream/fails/batch-20-keyed-topics/commit-1/tests/CycloneDDS.Runtime.Tests/Gen/CycloneDDS.IdlMap.g.cs
// <auto-generated />
using CycloneDDS.Schema;
using System.Reflection;

[assembly: DdsIdlMapping("CycloneDDS.Runtime.Tests.CompositeKeyMessage", "CompositeKeyMessage", "CycloneDDS::Runtime::Tests")]
[assembly: DdsIdlMapping("CycloneDDS.Runtime.Tests.KeyedTestMessage", "KeyedTestMessage", "CycloneDDS::Runtime::Tests")]
[assembly: DdsIdlMapping("CycloneDDS.Runtime.Tests.TestMessage", "TestMessage", "CycloneDDS::Runtime::Tests")]
